Fixed style for add event button, now it's visible.

--- a/src/app/tabs/calendar/calendar.page.scss
+++ b/src/app/tabs/calendar/calendar.page.scss
@@ -29,3 +29,8 @@ margin-top: 37px;
   font-size:24px;
   color: var(--ion-color-tertiary);
 }
+
+.addEvent_btn {
+  color:var(--ion-color-primary);
+  background-color:var(--ion-color-tertiary);
+}
